<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">Cafezh Muetras</string>
    <string name="capture_button_alt">Capturar</string>
    <string name="switch_camera_button_alt">Switch camara</string>
    <string name="gallery_button_alt">Galeria</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Compartir</string>
    <string name="share_hint">Compartir usando</string>
    <string name="capture_mode_camera">Camara</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">eliminar</string>
    <string name="delete_dialog">Eliminará esta imagen?</string>
    <string name="delete_title">Confirmar</string>
    <string name="title_activity_main">Cafezh Muetras</string>
    <string name="navigation_drawer_open">Abrir navegacion drawer</string>
    <string name="navigation_drawer_close">Cerrar navegacion drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configuracion</string>
    <!--
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
-->


    <string name="mnu_inicio">Capturar Muestras</string>
    <string name="mnu_galeria">Galeria</string>
    <string name="mnu_produccion">Producción</string>
    <string name="mnu_Configuracion">Configuracion</string>
    <string name="mnu_chat">Chat</string>
    <string name="mnu_enviar">Enviar Imagenes</string>
    <string name="red">Red</string>
    <string name="app_nombre">Cafezh</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
