<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_capturarMuestra"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/mnu_inicio" />
        <item
            android:id="@+id/nav_galeria"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/mnu_galeria" />
    </group>

    <item android:title="@string/red">
        <menu>
            <item
                android:id="@+id/nav_chat"
                android:icon="@android:drawable/stat_notify_chat"
                android:title="@string/mnu_chat" />
            <item
                android:id="@+id/nav_produccion"
                android:icon="@drawable/icono_produccion"
                android:title="@string/mnu_produccion" />
            <item
                android:id="@+id/nav_subirFotos"
                android:icon="@drawable/icono_upload"
                android:title="@string/mnu_enviar" />
            <item
                android:id="@+id/nav_configuracion"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/mnu_Configuracion" />
        </menu>
    </item>

</menu>
